# EleViewr

./: .SRCINFO  Cargo.toml  LICENSE  PKGBUILD  README.md  eleviewr.desktop  manual_install.sh
.github/: CODEOWNERS  branch-protection-rules.yml  dependabot.yml
.github/workflows/: aur-publish.yml  release.yml  test_and_linting.yml
src/: config.rs  main.rs  notifications.rs  shader.wgsl
